k8s/infra/database/hatchet/caddy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-svc
  namespace: hatchet
spec:
  selector:
    app: caddy
  ports:
    - port: 8080
      targetPort: 8080
